# cmake_sanitizer_demo

./: CMakeLists.txt  README.md  a.c  test.c
.github/workflows/: build.yaml
